# cpio

./: Makefile.in  aclocal.m4  config.h.in  configure  defer.c  dstring.c  makefile.os2  rtapelib.c  tar.c  version.c
doc/: Makefile.in  cpio.info~  version.texi
gnu/: utimens.c
headers/: Makefile.in
lib/: Makefile.am  Makefile.in
m4/: gnulib-comp.m4  gnulib.m4  system.m4
po/: LINGUAS  cpio.pot  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hu.po  ko.gmo  ko.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  ru.gmo  ru.po  rw.gmo  rw.po  sv.gmo  sv.po  tr.gmo  tr.po  uk.gmo  uk.po  vi.gmo  vi.po  zh_CN.gmo  zh_CN.po
rmt/: Makefile.in
src/: Makefile.in  copyin.c
tests/: Makefile.in  package.m4  testsuite
